--- a/careers.html
+++ b/careers.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">RAS AL FANA</div>
+    <!-- <div class="logo">RAS AL FANA</div> -->
+     <div class="logo">
+  <img src="images/logo.png" alt="RAS AL FANA Logo" style="height:32px;vertical-align:middle;">
+  RAS AL FANA
+</div>
+
     <div class="hamburger" id="hamburger">
       <div></div>
       <div></div>
@@ -32,10 +37,24 @@
     <p>You may email your CV to <strong>ras.alfana.llc@gmail.com</strong> for future consideration.</p>
   </section>
 
-  <footer>
+  <!-- <footer>
     <p>📍 Dubai, United Arab Emirates</p>
     <p>📞 +971 54 351 3211 | +971 50 465 6144 | ✉️ ras.alfana.llc@gmail.com</p>
     <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
-  </footer>
+  </footer> -->
+  <footer>
+  <p>
+    <img src="https://www.iconpacks.net/icons/2/free-location-icon-2952-thumb.png" alt="Location" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
+    Dubai, United Arab Emirates
+  </p>
+  <p>
+    <img src="https://www.iconpacks.net/icons/1/free-phone-icon-504-thumb.png" alt="Phone" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
+    +971 50 728 6144 | +971 50 726 8144 &nbsp;
+    <img src="https://icons.veryicon.com/png/o/business/oa-office/mail-227.png" alt="Mail" style="height:1em;width:1em;vertical-align:middle;margin-left:12px;margin-right:5px;">
+    ras.alfana.llc@gmail.com
+  </p>
+  <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
