--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | RAS AL FANA TECHNICAL WORKS L.L.C</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script defer src="script.js"></script>
+
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">RAS AL FANA</div>
+    <!-- <div class="logo">RAS AL FANA</div> -->
+     <div class="logo">
+  <img src="images/logo.png" alt="RAS AL FANA Logo" style="height:32px;vertical-align:middle;">
+  RAS AL FANA
+</div>
+
     <div class="hamburger" id="hamburger">
       <div></div>
       <div></div>
@@ -26,9 +33,9 @@
     </nav>
   </header>
 
-  <section class="hero fade-in">
+  <section class="hero fade-in" style="background-image:url('images/hero1.jpg'); background-size:cover; background-position:center;">
     <h1>RAS AL FANA TECHNICAL WORKS L.L.C</h1>
-    <p>Reliable Maintenance & Technical Services in Dubai & Abu Dhabi</p>
+    <p>We deliver quality you can trust. </p>
     <a href="quote.html" class="btn">Request a Quote</a>
   </section>
 
@@ -41,7 +48,7 @@
     </p>
   </section>
 
-  <section class="why slide-up">
+  <!-- <section class="why slide-up">
     <h2>Why Choose Us</h2>
     <div class="cards">
       <div class="card">✅ Skilled and experienced technicians</div>
@@ -50,12 +57,53 @@
       <div class="card">✅ Serving Dubai & Abu Dhabi</div>
       <div class="card">✅ Professional and reliable service</div>
     </div>
-  </section>
+  </section> -->
 
-  <footer>
+  <section class="why slide-up">
+  <h2>Why Choose Us</h2>
+  <div class="cards">
+    <div class="card">
+      <span class="material-icons card-icon" aria-hidden="true">engineering</span>
+      Skilled & Experienced Technicians
+    </div>
+    <div class="card">
+      <span class="material-icons card-icon" aria-hidden="true">schedule</span>
+      On-Time Project Completion
+    </div>
+    <div class="card">
+      <span class="material-icons card-icon" aria-hidden="true">star_rate</span>
+      Quality Workmanship at Affordable Rates
+    </div>
+    <div class="card">
+      <span class="material-icons card-icon" aria-hidden="true">public</span>
+      Serving Dubai & Abu Dhabi
+    </div>
+    <div class="card">
+      <span class="material-icons card-icon" aria-hidden="true">handshake</span>
+      Professional & Reliable Service
+    </div>
+  </div>
+</section>
+
+
+  <!-- <footer>
     <p>📍 Dubai, United Arab Emirates</p>
     <p>📞 +971 54 351 3211 | +971 50 465 6144 | ✉️ ras.alfana.llc@gmail.com</p>
     <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
-  </footer>
+  </footer> -->
+  <footer>
+  <p>
+    <img src="https://www.iconpacks.net/icons/2/free-location-icon-2952-thumb.png" alt="Location" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
+    Dubai, United Arab Emirates
+  </p>
+  <p>
+    <img src="https://www.iconpacks.net/icons/1/free-phone-icon-504-thumb.png" alt="Phone" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
+    +971 50 728 6144 | +971 50 726 8144 &nbsp;
+    <img src="https://icons.veryicon.com/png/o/business/oa-office/mail-227.png" alt="Mail" style="height:1em;width:1em;vertical-align:middle;margin-left:12px;margin-right:5px;">
+    ras.alfana.llc@gmail.com
+  </p>
+  <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
