--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | RAS AL FANA TECHNICAL WORKS L.L.C</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script defer src="script.js"></script>
 </head>
+
 <body>
   <header class="navbar">
-    <!-- <div class="logo">RAS AL FANA</div> -->
-     <div class="logo">
-  <img src="images/logo.png" alt="RAS AL FANA Logo" style="height:32px;vertical-align:middle;">
-  RAS AL FANA
-</div>
+
+    <div class="logo">
+      <img src="images/logo.png" alt="RAS AL FANA Logo" style="height:32px;vertical-align:middle;">
+      RAS AL FANA
+    </div>
 
     <div class="hamburger" id="hamburger">
       <div></div>
@@ -31,33 +34,82 @@
     </nav>
   </header>
 
-  <section class="contact slide-up">
+  <!-- <section class="contact slide-up">
     <h2>Contact Us</h2>
     <p><strong>📞 Phone:</strong> +971 54 351 3211 / +971 50 465 6144</p>
     <p><strong>💬 WhatsApp:</strong> +971 54 351 3211</p>
     <p><strong>✉️ Email:</strong> <a href="mailto:ras.alfana.llc@gmail.com">ras.alfana.llc@gmail.com</a></p>
     <p><strong>📸 Instagram:</strong> <a href="#" target="_blank">Follow us</a></p>
     <p><strong>🌐 Website:</strong> <a href="#">www.rasalfana.com</a></p>
+  </section> -->
+
+
+
+  <!-- Updated Contact Section -->
+  <section class="contact-modern slide-up">
+    <h2>Contact Us</h2>
+    <div class="contact-grid">
+      <div class="contact-card">
+        <span class="material-icons">call</span>
+        <div>
+          <h3>Phone</h3>
+          <p>+971 50 728 6144<br>+971 50 726 8144</p>
+        </div>
+      </div>
+
+      <div class="contact-card">
+        <span class="material-icons">chat</span>
+        <div>
+          <h3>WhatsApp</h3>
+          <p>+971 50 728 6144</p>
+        </div>
+      </div>
+
+      <div class="contact-card">
+        <span class="material-icons">email</span>
+        <div>
+          <h3>Email</h3>
+          <p><a href="mailto:ras.alfana.llc@gmail.com">ras.alfana.llc@gmail.com</a></p>
+        </div>
+      </div>
+
+      <div class="contact-card">
+        <span class="material-icons">language</span>
+        <div>
+          <h3>Website</h3>
+          <p><a href="#">www.rasalfana.com</a></p>
+        </div>
+      </div>
+
+      <div class="contact-card">
+        <span class="material-icons">location_on</span>
+        <div>
+          <h3>Address</h3>
+          <p>Dubai, United Arab Emirates</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <!-- <footer>
-    <p>📍 Dubai, United Arab Emirates</p>
-    <p>📞 +971 54 351 3211 | +971 50 465 6144 | ✉️ ras.alfana.llc@gmail.com</p>
-    <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
-  </footer> -->
+
+
   <footer>
-  <p>
-    <img src="https://www.iconpacks.net/icons/2/free-location-icon-2952-thumb.png" alt="Location" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
-    Dubai, United Arab Emirates
-  </p>
-  <p>
-    <img src="https://www.iconpacks.net/icons/1/free-phone-icon-504-thumb.png" alt="Phone" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
-    +971 50 728 6144 | +971 50 726 8144 &nbsp;
-    <img src="https://icons.veryicon.com/png/o/business/oa-office/mail-227.png" alt="Mail" style="height:1em;width:1em;vertical-align:middle;margin-left:12px;margin-right:5px;">
-    ras.alfana.llc@gmail.com
-  </p>
-  <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
-</footer>
+    <p>
+      <img src="https://www.iconpacks.net/icons/2/free-location-icon-2952-thumb.png" alt="Location"
+        style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
+      Dubai, United Arab Emirates
+    </p>
+    <p>
+      <img src="https://www.iconpacks.net/icons/1/free-phone-icon-504-thumb.png" alt="Phone"
+        style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
+      +971 50 728 6144 | +971 50 726 8144 &nbsp;
+      <img src="https://icons.veryicon.com/png/o/business/oa-office/mail-227.png" alt="Mail"
+        style="height:1em;width:1em;vertical-align:middle;margin-left:12px;margin-right:5px;">
+      ras.alfana.llc@gmail.com
+    </p>
+    <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
+  </footer>
 
 </body>
+
 </html>
