--- a/contact.html
+++ b/contact.html
@@ -34,15 +34,6 @@
     </nav>
   </header>
 
-  <!-- <section class="contact slide-up">
-    <h2>Contact Us</h2>
-    <p><strong>📞 Phone:</strong> +971 54 351 3211 / +971 50 465 6144</p>
-    <p><strong>💬 WhatsApp:</strong> +971 54 351 3211</p>
-    <p><strong>✉️ Email:</strong> <a href="mailto:ras.alfana.llc@gmail.com">ras.alfana.llc@gmail.com</a></p>
-    <p><strong>📸 Instagram:</strong> <a href="#" target="_blank">Follow us</a></p>
-    <p><strong>🌐 Website:</strong> <a href="#">www.rasalfana.com</a></p>
-  </section> -->
-
 
 
   <!-- Updated Contact Section -->
@@ -88,6 +79,17 @@
           <p>Dubai, United Arab Emirates</p>
         </div>
       </div>
+
+       <div class="contact-card">
+        <span class="material-icons">camera_alt</span>
+        <div>
+          <h3>Instagram</h3>
+          <p><a href="https://www.instagram.com/ras.alfana.ae" target="_blank">@ras.alfana.ae</a></p>
+        </div>
+      </div>
+    </div>
+
+    
     </div>
   </section>
 
