--- a/quote.html
+++ b/quote.html
@@ -46,15 +46,15 @@
       <label for="description">Work Description</label>
       <textarea id="description" name="Description" rows="5" required></textarea>
 
+      <label for="rfq-file">Upload RFQ File</label>
+    <input type="file" id="rfq-file" name="RFQFile" accept=".pdf,.doc,.docx,.txt">
+
+
       <button type="submit" class="btn">Send Request</button>
     </form>
   </section>
 
-  <!-- <footer>
-    <p>📍 Dubai, United Arab Emirates</p>
-    <p>📞 +971 54 351 3211 | +971 50 465 6144 | ✉️ ras.alfana.llc@gmail.com</p>
-    <p>© 2025 RAS AL FANA TECHNICAL WORKS L.L.C. All Rights Reserved.</p>
-  </footer> -->
+  
   <footer>
   <p>
     <img src="https://www.iconpacks.net/icons/2/free-location-icon-2952-thumb.png" alt="Location" style="height:1em;width:1em;vertical-align:middle;margin-right:5px;">
