--- a/index.html
+++ b/index.html
@@ -32,12 +32,21 @@
       </ul>
     </nav>
   </header>
-
+<!-- 
   <section class="hero fade-in" style="background-image:url('images/hero1.jpg'); background-size:cover; background-position:center;">
     <h1>RAS AL FANA TECHNICAL WORKS L.L.C</h1>
     <p>We deliver quality you can trust. </p>
     <a href="quote.html" class="btn">Request a Quote</a>
-  </section>
+  </section> -->
+
+  <section class="hero fade-in" style="background-image:url('images/hero1.jpg');">
+  <div class="hero-overlay">
+    <!-- <h1>RAS AL FANA TECHNICAL WORKS L.L.C</h1> -->
+    <p>We deliver quality you can trust.</p>
+    <a href="quote.html" class="btn">Request a Quote</a>
+  </div>
+</section>
+
 
   <section class="about slide-up">
     <h2>About Us</h2>
